--- a/src/shared/styles/default-palette.css
+++ b/src/shared/styles/default-palette.css
@@ -31,7 +31,7 @@
   /* --txt--success: #27ae60; */
   --txt--disabled: #9796a8;
 
-  /* --bg--primary: #ffffff; */
+  --bg--primary: #fff;
   /* --bg--secondary: #ffffff; */
   /* --bg--tertiary: #ffffff; */
   /* --bg--neutral: #f8f8fe; */
