--- a/src/shared/ui/btns/Btn/Btn.module.css
+++ b/src/shared/ui/btns/Btn/Btn.module.css
@@ -13,6 +13,7 @@
   transition-timing-function: var(--default-transition-timing-fn);
   transition-duration: var(--default-transition-duration);
   transition-property: color, background-color, border-color;
+  font-size: 16px;
 
   &:disabled {
     pointer-events: none;
