--- a/src/shared/ui/btns/RoundedIconBtn/RoundedIconBtn.module.css
+++ b/src/shared/ui/btns/RoundedIconBtn/RoundedIconBtn.module.css
@@ -1,5 +1,10 @@
 .rounded-icon-btn {
   --btn-border-radius: 99em;
-  padding: 7px;
+  padding: 0;
+  min-height: 40px;
   aspect-ratio: 1;
+
+  :global(.btn__icon) {
+    height: 24px;
+  }
 }
