--- a/src/shared/ui/inputs/LabeledInputWrapper/LabeledInputWrapper.module.css
+++ b/src/shared/ui/inputs/LabeledInputWrapper/LabeledInputWrapper.module.css
@@ -1,15 +1,13 @@
-.base-input {
-  font-family: sans-serif;
+.labeled-input-wrapper {
   position: relative;
   display: flex;
   align-items: center;
   border-radius: 6px;
-  cursor: text;
   flex-grow: 1;
 }
 
-.base-input__input-wrapper {
-  padding-top: calc(var(--input-raised-label-fz) * var(--line-height));
+.labeled-input-wrapper__input-wrapper {
+  padding-top: calc(var(--input-raised-label-fz) * (var(--line-height) * 1.2));
   transform: translateY(0.5em);
   opacity: 0;
   transition-property: opacity, transform;
@@ -19,7 +17,7 @@
   width: 100%;
 }
 
-.base-input__label {
+.labeled-input-wrapper__label {
   position: absolute;
   left: 0;
   top: 50%;
@@ -30,14 +28,14 @@
   line-height: var(--line-height);
 }
 
-.base-input__el-box {
+.labeled-input-wrapper__el-box {
   flex-shrink: 0;
   display: flex;
   align-items: center;
   column-gap: 2px;
 }
 
-.base-input__el-box_right {
+.labeled-input-wrapper__el-box_right {
   transform: translateY(0.5em);
   opacity: 0;
   transition-property: opacity, transform;
@@ -45,27 +43,19 @@
   transition-timing-function: var(--default-transition-timing-fn);
 }
 
-.base-input:has(input:not(:placeholder-shown)) > .base-input__label,
-.base-input:has(input:focus) > .base-input__label {
+.labeled-input-wrapper:has(input:not(:placeholder-shown))
+  > .labeled-input-wrapper__label,
+.labeled-input-wrapper:has(input:focus) > .labeled-input-wrapper__label {
   top: 0;
   transform: translateY(0);
   font-size: var(--input-raised-label-fz);
 }
 
-.base-input__input-wrapper:has(input:not(:placeholder-shown)),
-.base-input__input-wrapper:has(input:focus),
-.base-input:has(input:not(:placeholder-shown)) > .base-input__el-box_right,
-.base-input:has(input:focus) > .base-input__el-box_right {
+.labeled-input-wrapper__input-wrapper:has(input:not(:placeholder-shown)),
+.labeled-input-wrapper__input-wrapper:has(input:focus),
+.labeled-input-wrapper:has(input:not(:placeholder-shown))
+  > .labeled-input-wrapper__el-box_right,
+.labeled-input-wrapper:has(input:focus) > .labeled-input-wrapper__el-box_right {
   transform: translateY(0);
   opacity: 1;
-}
-
-.base-input__input {
-  border: none;
-  outline: none;
-  font: inherit;
-  padding: 0;
-  flex-grow: 1;
-  background-color: transparent;
-  line-height: var(--line-height);
 }
