--- a/src/shared/ui/inputs/BaseLabeledInputWrapper/BaseLabeledInputWrapper.module.css
+++ b/src/shared/ui/inputs/BaseLabeledInputWrapper/BaseLabeledInputWrapper.module.css
@@ -1,12 +1,13 @@
-.labeled-input-wrapper {
+.base-labeled-input-wrapper {
   position: relative;
   display: flex;
   align-items: center;
   border-radius: 6px;
   flex-grow: 1;
+  overflow: hidden;
 }
 
-.labeled-input-wrapper__input-wrapper {
+.base-labeled-input-wrapper__input-wrapper {
   padding-top: calc(var(--input-raised-label-fz) * (var(--line-height) * 1.2));
   transform: translateY(0.5em);
   opacity: 0;
@@ -14,10 +15,11 @@
   transition-duration: var(--default-transition-duration);
   display: flex;
   align-items: center;
-  width: 100%;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
-.labeled-input-wrapper__label {
+.base-labeled-input-wrapper__label {
   position: absolute;
   left: 0;
   top: 50%;
@@ -28,14 +30,14 @@
   line-height: var(--line-height);
 }
 
-.labeled-input-wrapper__el-box {
+.base-labeled-input-wrapper__el-box {
   flex-shrink: 0;
   display: flex;
   align-items: center;
   column-gap: 2px;
 }
 
-.labeled-input-wrapper__el-box_right {
+.base-labeled-input-wrapper__el-box_right {
   transform: translateY(0.5em);
   opacity: 0;
   transition-property: opacity, transform;
@@ -43,19 +45,21 @@
   transition-timing-function: var(--default-transition-timing-fn);
 }
 
-.labeled-input-wrapper:has(input:not(:placeholder-shown))
-  > .labeled-input-wrapper__label,
-.labeled-input-wrapper:has(input:focus) > .labeled-input-wrapper__label {
+.base-labeled-input-wrapper:has(input:not(:placeholder-shown))
+  > .base-labeled-input-wrapper__label,
+.base-labeled-input-wrapper:has(input:focus)
+  > .base-labeled-input-wrapper__label {
   top: 0;
   transform: translateY(0);
   font-size: var(--input-raised-label-fz);
 }
 
-.labeled-input-wrapper__input-wrapper:has(input:not(:placeholder-shown)),
-.labeled-input-wrapper__input-wrapper:has(input:focus),
-.labeled-input-wrapper:has(input:not(:placeholder-shown))
-  > .labeled-input-wrapper__el-box_right,
-.labeled-input-wrapper:has(input:focus) > .labeled-input-wrapper__el-box_right {
+.base-labeled-input-wrapper__input-wrapper:has(input:not(:placeholder-shown)),
+.base-labeled-input-wrapper__input-wrapper:has(input:focus),
+.base-labeled-input-wrapper:has(input:not(:placeholder-shown))
+  > .base-labeled-input-wrapper__el-box_right,
+.base-labeled-input-wrapper:has(input:focus)
+  > .base-labeled-input-wrapper__el-box_right {
   transform: translateY(0);
   opacity: 1;
 }
